# azure_asp

./: .dockerignore  README.md  docker-compose.yml
backend/: Dockerfile  backend.dockerfile  pyproject.toml
backend/app/: __main__.py  application.py
backend/app/api/: router.py
backend/app/api/endpoints/: helloworld.py
frontend/: package-lock.json  package.json
scripts/: build.sh
