[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.34"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
sqlmodel = "^0.0.6"
python-dotenv = "^0.20.0"
urllib3 = "^1.26.10"
requests = "^2.28.1"
pyproject-flake8 = "^0.0.1-alpha.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.971"
pytest-cov = "^3.0.0"
isort = "^5.10.1"

[tool.black]
line-length = 99
target-version = ["py39"]

[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = 99
extend-ignore = "E203,"
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
